      listing.
    - Treat missing v3 keys or certificates as an error when running as a
      v3 directory authority.

  o Minor bugfixes (v3 directory protocol)
    - Delete unverified-consensus when the real consensus is set.
    - Consider retrying a consensus networkstatus fetch immediately after one
      fails: don't wait 60 seconds to notice.

  o Minor bugfixes (controller):
    - Don't reset trusted dir server list when we set a configuration option.
      (Patch from Robert Hogan.)

  o Minor bugfixes (memory leaks):
    - Stop leaking memory on failing case of base32_decode.  Bugfix on
      0.2.0.7-alpha.

  o Minor bugfixes (misc):
    - Make base32_decode() accept upper-case letters.  Bugfix on
      0.2.0.7-alpha.

  o Minor bugfixes (performance):
    - Base64 decoding was actually showing up on our profile when parsing
      the initial descriptor file; switch to an in-process all-at-once
      implementation that's about 3.5x times faster than calling out to
      OpenSSL.

  o Code simplifications and refactoring:
    - Remove support for the old bw_accounting file: we've been storing
      bandwidth accounting information in the state file since 0.1.2.5-alpha.
      This may result in bandwidth accounting errors if you try to upgrade
      from 0.1.1.x or earlier, or if you try to downgrade to 0.1.1.x or
      earlier.
    - New convenience code to locate a file within the DataDirectory.

Changes in version 0.2.0.8-alpha - 2007-10-12
  o Major features (router descriptor cache):
    - Store routers in a file called cached-descriptors instead of in
      cached-routers. Initialize cached-descriptors from cached-routers
      if the old format is around. The new format allows us to store
      annotations along with descriptors.
    - Use annotations to record the time we received each descriptor, its
      source, and its purpose.
    - Disable the SETROUTERPURPOSE controller command: it is now
      obsolete.